<resources>
    <string name="app_name">Posture Correction</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>

    <string name="email_signup">Email Signup</string>
    <string name="email_login">Email Login</string>
    <string name="google_login">Google Login</string>
    <string name="facebook_login">Facebook Login</string>

    <string name="main_page">상태</string>
    <string name="graph_page">그래프</string>
    <string name="video_page">비디오</string>

    <string name="start_date">시작일</string>
    <string name="end_date">현재까지</string>
    <string name="content_description_media">state image</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>