<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@android:string/no"
        android:tint="#2E7D32"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="80dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColorHint="#558B2F"
        android:textSize="16sp" />

    <!--텍스트 필드 코드-->
    <!--E-mail 입력 텍스트-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/hint_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--비밀번호 입력 텍스트-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/hint_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.button.MaterialButton
        android:id="@+id/email_login_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="6dp"
        android:text="@string/email_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/email_signup_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:text="@string/email_signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_login_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="@string/google_login">

        </com.google.android.gms.common.SignInButton>

    </LinearLayout>

</ScrollView>




